Fixed Whitespace

--- a/Styles/form-styles.css
+++ b/Styles/form-styles.css
@@ -2,6 +2,9 @@ body{
     padding: 0px;
     margin: 0px;
 }
+.background-wrap{
+    display: flex;
+}
 .left-background{
     display:inline-block;
     padding: 0px;
